src/test/ui/parser/keyword-let-as-identifier.stderr
error: expected pattern, found keyword `let`
  --> $DIR/keyword-let-as-identifier.rs:4:9
   |
LL |     let let = "foo"; //~ error: expected pattern, found keyword `let`
   |         ^^^ expected pattern

error: aborting due to previous error

